knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/ContractPaymentAgreement/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Service_Account</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contract Payment Agreements</relationshipLabel>
    <relationshipName>Contract_Payment_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>