knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/ContractPaymentAgreement/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; Provider_Network_Contract__r.Healthcare_Practitioner_Facility__r.AccountId ,  Provider_Network_Contract__r.Healthcare_Practitioner_Facility__r.Account.Name , &quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>