knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/ContractPaymentAgreement/fields/Cloned_From__c.field-meta.xml
<CustomField>
    <fullName>Cloned_From__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cloned From</label>
    <referenceTo>ContractPaymentAgreement</referenceTo>
    <relationshipLabel>Contract Payment Agreements</relationshipLabel>
    <relationshipName>Contract_Payment_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>