knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/ContractPaymentAgreement/fields/Created_By__c.field-meta.xml
<CustomField>
    <fullName>Created_By__c</fullName>
    <formula>CreatedBy.FirstName &amp; &quot; &quot; &amp; CreatedBy.LastName &amp; &quot;, &quot; &amp; TEXT(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created By</label>
    <type>Text</type>
</CustomField>