knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/ContractPaymentAgreement/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <formula>DATEVALUE( EndDateTime )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EndDate</label>
    <type>Date</type>
</CustomField>