knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/ContractPaymentAgreement/fields/Facility_Rate__c.field-meta.xml
<CustomField>
    <fullName>Facility_Rate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Facility Rate</label>
    <referenceTo>ContractPaymentAgreement</referenceTo>
    <relationshipLabel>Contract Payment Agreements (Facility Rate)</relationshipLabel>
    <relationshipName>Contract_Payment_Agreements1</relationshipName>
    <type>Lookup</type>
</CustomField>