knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/ContractPaymentAgreement/fields/Healthcare_Practitioner_Facility__c.field-meta.xml
<CustomField>
    <fullName>Healthcare_Practitioner_Facility__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; Provider_Network_Contract__r.Healthcare_Practitioner_Facility__c , Provider_Network_Contract__r.Healthcare_Practitioner_Facility__r.Name , &quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Healthcare Practitioner Facility</label>
    <type>Text</type>
</CustomField>