knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/ContractPaymentAgreement/fields/Mixed_Bag_Shift_Rates__c.field-meta.xml
<CustomField>
    <fullName>Mixed_Bag_Shift_Rates__c</fullName>
    <label>Mixed Bag Shift Rates?</label>
    <summaryFilterItems>
        <field>PreventiveCareAgreement.Mixed_Bag_Shift_Rates__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>PreventiveCareAgreement.ContractPaymentAgreementId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>