knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/ContractPaymentAgreement/fields/Net_New_Entry_Rate__c.field-meta.xml
<CustomField>
    <fullName>Net_New_Entry_Rate__c</fullName>
    <label>Net New Entry Rate?</label>
    <summaryFilterItems>
        <field>PreventiveCareAgreement.Is_Newly_Added__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>PreventiveCareAgreement.ContractPaymentAgreementId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>