knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/ContractPaymentAgreement/fields/New_Shift_Type_Added__c.field-meta.xml
<CustomField>
    <fullName>New_Shift_Type_Added__c</fullName>
    <label>New Shift Type Added?</label>
    <summaryFilterItems>
        <field>PreventiveCareAgreement.New_Shift_Type_Added__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>PreventiveCareAgreement.ContractPaymentAgreementId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>