knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/ContractPaymentAgreement/fields/Rate_Decreased__c.field-meta.xml
<CustomField>
    <fullName>Rate_Decreased__c</fullName>
    <label>Rate Decreased?</label>
    <summaryFilterItems>
        <field>PreventiveCareAgreement.Existing_Rate_Decreased__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>PreventiveCareAgreement.ContractPaymentAgreementId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>