knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/ContractPaymentAgreement/fields/Rate_Increased__c.field-meta.xml
<CustomField>
    <fullName>Rate_Increased__c</fullName>
    <label>Rate Increased?</label>
    <summaryFilterItems>
        <field>PreventiveCareAgreement.Existing_Rate_Increased__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>PreventiveCareAgreement.ContractPaymentAgreementId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>