knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/ContractPaymentAgreement/fields/Rate_Pay_Code_Added__c.field-meta.xml
<CustomField>
    <fullName>Rate_Pay_Code_Added__c</fullName>
    <label>Rate Pay Code Added?</label>
    <summarizedField>PreventiveCareAgreement.Rate_Pay_Code_Added__c</summarizedField>
    <summaryForeignKey>PreventiveCareAgreement.ContractPaymentAgreementId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>