knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/ContractPaymentAgreement/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stipend</fullName>
            </value>
            <value>
                <fullName>Shift</fullName>
            </value>
            <value>
                <fullName>Variable</fullName>
            </value>
            <value>
                <fullName>Target</fullName>
            </value>
            <value>
                <fullName>Bonus</fullName>
            </value>
            <value>
                <fullName>Locum</fullName>
            </value>
            <value>
                <fullName>Leadership Incentives</fullName>
            </value>
            <value>
                <fullName>Locums</fullName>
                <isActive>false</isActive>
                <label>Locums</label>
            </value>
            <value>
                <fullName>Locums On Call</fullName>
                <isActive>false</isActive>
                <label>Locums On Call</label>
            </value>
            <value>
                <fullName>Locums Travel</fullName>
                <isActive>false</isActive>
                <label>Locums Travel</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>